# django-studio

./: .gitignore  .pre-commit-config.yaml  .ruffignore  AGENTS.md  BUGS.md  IMPROVEMENTS.md  LICENSE  README.md  cookiecutter.json  copier.yml  justfile  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
licenses/: AGPL-3.0  BSD-2-Clause  BSD-3-Clause  EUPL-1.2  GPL-3.0  ISC  LGPL-3.0  MPL-2.0
skills/: django-studio.md  djstudio.md
skills/djstudio/: a11y.md  create-app.md  create-command.md  create-cron.md  create-crud.md  create-e2e.md  create-filter.md  create-model.md  create-tag.md  create-task.md  create-view.md  daisyui.md  deadcode.md  enable-db-backups.md  full-coverage.md  gdpr.md  launch-observability.md  launch.md  perf.md  rotate-secrets.md  secure.md  sync.md  translate.md
template/: .dockerignore  .env.example.jinja  .pre-commit-config.yaml  AGENTS.md.jinja  DEPLOYMENT.md.jinja  Dockerfile  README.md.jinja  conftest.py.jinja  justfile  opencode.json  playwright.ini.jinja  pyproject.toml.jinja  release.sh  vendors.json
template/config/: settings.py.jinja  urls.py.jinja
template/design/: Carousel.md  Forms.md  (+11 more)
tests/: conftest.py  helpers.py  test_generation.py  test_project.py  test_quality.py  test_skill_scripts.py  test_template.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  conftest.py  gunicorn.conf.py  justfile  playright.ini  playwright.ini  pyproject.toml
(+432 files in other folders)
