[project]
name = "django-studio"
version = "0.1.0"
description = "Copier template for Django projects with HTMX, Alpine.js, and Tailwind CSS"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "copier>=9.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "-x",
    "--tb=short",
]

[tool.coverage.run]
omit = []

[tool.coverage.report]
omit = []

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
]
ignore = ["E501"]
